# Mukei shared Rust workspace for the Kotlin Android production branch.
# Android platform integration lives in `mukei-android-jni`; Qt/CXX-Qt is
# intentionally absent from this branch.

[workspace]
resolver = "2"
members = [
    "crates/mukei-core",
    "crates/mukei-android-jni",
    "llama-cpp-stub",
]
exclude = [
    "target",
    "llama-cpp-prebuilt",
]

[workspace.package]
version = "0.7.5"
edition = "2021"
rust-version = "1.82"
license = "Apache-2.0"
authors = ["Mukei AI Architecture Pass"]

[workspace.dependencies]
# Concurrency / runtime
tokio = { version = "1.40", features = ["rt-multi-thread", "sync", "time", "macros"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"
async-trait = "0.1"

# Android JNI
jni = "0.21"

# LLM inference
llama-cpp-rs = { path = "llama-cpp-stub" }

# RAG / embeddings
half = "=2.4.1"
candle-core = "0.7"
candle-nn = "0.7"
candle-transformers = "0.7"
usearch = "2.15"
tokenizers = "0.19"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# HTTP and parsing
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
url = "2.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Crypto / hashes
sha2 = "0.10"
blake3 = "=1.5.5"
zeroize = { version = "1.7", features = ["derive"] }
subtle = "2.5"
aes-gcm = "0.10.3"

# Diagnostics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-panic = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Synchronization
parking_lot = "0.12"
once_cell = "1.19"
bloomfilter = "1.0"

# Miscellaneous
uuid = { version = "1.10", features = ["v4", "serde"] }
getrandom = "0.2"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

[profile.release]
lto = "thin"
codegen-units = 1
panic = "unwind"
strip = true
opt-level = 3

[profile.dev]
opt-level = 0
debug = true
incremental = true
panic = "unwind"

[profile.android-release]
inherits = "release"
opt-level = "z"
lto = "fat"
panic = "unwind"

[profile.release-hardening]
inherits = "release"
lto = "fat"
codegen-units = 1
panic = "unwind"
strip = "symbols"
opt-level = 3
