[package]
name = "mukei-android-jni"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Dedicated JNI boundary between the Mukei Kotlin application and mukei-core"

[lib]
name = "mukei_android"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[features]
default = ["runtime_development"]
runtime_development = []
runtime_test = []
native_inference = []
secure_runtime = ["mukei-core/sqlcipher"]
# Android production uses the Mukei-owned llama capsule through
# `native_inference`; enabling the legacy llama-cpp-rs feature here would build
# a second inference stack and break the single-capsule provenance contract.
runtime_production = [
    "native_inference",
    "secure_runtime",
    "mukei-core/network",
]
runtime_hardening = ["mukei-core/runtime_hardening"]

[dependencies]
mukei-core = { path = "../mukei-core", default-features = false, features = ["std", "tokio"] }
async-trait = { workspace = true }
jni = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
zeroize = { workspace = true }
