[package]
name               = "mukei-bridge"
version            = "0.7.5"
edition            = "2021"
rust-version       = "1.78"
description        = "Mukei CXX-Qt bridge — exposes MukeiAgent, MukeiBridge, and JNI helpers to Qt/QML (TRD §1.2, §1.3, §9.4)"
license            = "LicenseRef-Mukei-Proprietary"
authors            = ["Mukei AI Architecture Pass"]
# First-party proprietary crate; see mukei-core/Cargo.toml for why
# `publish = false` is also required for cargo-deny.
publish            = false

[lib]
crate-type         = ["cdylib", "staticlib"]   # Android .so + Linux .a fallback
path               = "src/lib.rs"

[features]
# Default ships the Android Keystore unwrap path AND the real network
# stack so the QML `download_model` flow actually downloads on a
# tester's phone (TRD §8.1 / REQ-MOD-01). Drop `network` only when
# building a lab variant that explicitly forbids egress.
default            = ["android_keystore", "network", "sqlcipher"]
android_keystore   = []
desktop            = []
rusqlite           = ["mukei-core/rusqlite"]
sqlcipher          = ["rusqlite", "mukei-core/sqlcipher"]
network            = ["mukei-core/network"]

[dependencies]
mukei-core = { path = "../mukei-core", default-features = false, features = ["std", "tokio"] }

cxx         = { workspace = true }
cxx-qt      = { workspace = true }
cxx-qt-lib  = { workspace = true }

tokio       = { workspace = true, features = ["rt-multi-thread", "sync", "macros"] }
tokio-util  = { workspace = true }
async-trait = { workspace = true }

tracing      = { workspace = true }
thiserror    = { workspace = true }
anyhow       = { workspace = true }
parking_lot  = { workspace = true }
once_cell    = { workspace = true }
zeroize      = { workspace = true }
serde        = { workspace = true, features = ["derive"] }
serde_json   = { workspace = true }
chrono       = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
# JNI bindings are only meaningful on Android (TRD §9.4).
# On desktop builds the feature `desktop` replaces the JNI surface.
nix = { version = "0.27", features = ["term"] }   # terminal helpers & signal handling

[build-dependencies]
cxx-qt-build = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
