[package]
name               = "mukei-core"
version            = "0.7.5"
edition            = "2021"
rust-version       = "1.78"
description        = "Mukei Agent Core — ReAct loop, RAG engine, tool executor, storage, diagnostics (TRD v0.7.5)"
license            = "LicenseRef-Mukei-Proprietary"
authors            = ["Mukei AI Architecture Pass"]
# First-party proprietary crate, never published to crates.io. The
# explicit `publish = false` also tells cargo-deny to treat this
# member as private, which is the only way to make
# `allow-wildcard-paths = true` actually apply to intra-workspace
# `path = "../..."` deps (architect review GH #7, supply-chain CI).
publish            = false

[lib]
crate-type         = ["lib"]
path               = "src/lib.rs"

# ----------------------------------------------------------------------
# Feature matrix — see README.md "Build matrix" for the canonical names.
#
# Naming policy:
#   * snake_case identifiers (no quoted feature names).
#   * One capability per feature; no aliases.
#   * `sqlcipher` is a strict superset of `rusqlite` (encrypted SQLite)
#     and ENABLES it, instead of duplicating the dep list.
# ----------------------------------------------------------------------
[features]
default            = ["std", "tokio"]
std                = []
tokio              = ["dep:tokio", "dep:tokio-util"]
# Hardware-dependent features; turned off in sandbox / unit tests.
llama_cpp          = ["dep:llama-cpp-rs"]
usearch_hnsw       = ["dep:usearch"]
rusqlite           = ["dep:rusqlite", "dep:r2d2", "dep:r2d2_sqlite"]
sqlcipher          = ["rusqlite"]  # SQLCipher == rusqlite + encrypted backend
# `scraper` removed in v0.7.5 (see workspace Cargo.toml note): the
# current search engines use JSON-only APIs and `scraper` pulls in
# MPL-2.0 transitives that violate the Apache/MIT-only license policy.
network            = ["dep:reqwest", "dep:url"]
candle             = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:tokenizers"]
# Declared so the `#[cfg(feature = "ddg")] compile_error!(...)` anti-regression
# tripwire is recognized by check-cfg rather than surfacing as a warning.
ddg                = []
android_keystore   = []
release-hardening  = []

[dependencies]
# Workspace-shared deps (see ../Cargo.toml)
tokio        = { workspace = true, optional = true }
tokio-util   = { workspace = true, optional = true }
futures      = { workspace = true }
async-trait  = { workspace = true }

serde        = { workspace = true }
serde_json   = { workspace = true }
toml         = { workspace = true }

sha2         = { workspace = true }
blake3       = { workspace = true }
zeroize      = { workspace = true }
subtle       = { workspace = true }

tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

thiserror     = { workspace = true }
anyhow        = { workspace = true }

parking_lot   = { workspace = true }
once_cell     = { workspace = true }
bloomfilter   = { workspace = true }

uuid          = { workspace = true }
chrono        = { workspace = true }
meval         = { workspace = true }

# Optional integrations ----------------------------------------------------
rusqlite    = { workspace = true, optional = true }
r2d2        = { workspace = true, optional = true }
r2d2_sqlite = { workspace = true, optional = true }
usearch     = { workspace = true, optional = true }
reqwest     = { workspace = true, optional = true }
url         = { workspace = true, optional = true }
tokenizers  = { workspace = true, optional = true }
candle-core = { workspace = true, optional = true }
candle-nn   = { workspace = true, optional = true }
candle-transformers = { workspace = true, optional = true }
llama-cpp-rs = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3.10"
tokio    = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
# Architect review GH #18: property-based testing for the sentinel
# escape (`tools::sentinel::escape_untrusted`) and the fingerprint
# canonicaliser. `proptest` is also pulled in for the migration-order
# (GH #41) and idempotency (GH #35) tests in later batches.
proptest = "1.5"
