[package]
name               = "mukei-core"
version.workspace  = true
edition            = "2021"
rust-version       = "1.82"
description        = "Mukei Agent Core — ReAct loop, RAG engine, tool executor, storage, diagnostics (TRD v0.7.5)"
license            = "Apache-2.0"
authors            = ["Mukei AI Architecture Pass"]
# First-party Apache-2.0 crate, currently not published to crates.io. The
# explicit `publish = false` also tells cargo-deny to treat this
# member as private, which is the only way to make
# `allow-wildcard-paths = true` actually apply to intra-workspace
# `path = "../..."` deps (architect review GH #7, supply-chain CI).
publish            = false

[lib]
crate-type         = ["lib"]
path               = "src/lib.rs"

# ----------------------------------------------------------------------
# Feature matrix — see README.md "Build matrix" for the canonical names.
#
# Naming policy:
#   * snake_case identifiers (no quoted feature names).
#   * One capability per public feature. The legacy internal
#     `release-hardening` tripwire is retained only as a compatibility adapter
#     for existing guarded internals; app-facing builds use `runtime_hardening`.
#   * `sqlcipher` is a strict superset of `rusqlite` and enables
#     rusqlite's bundled SQLCipher backend, not just the plain bundled
#     SQLite fallback.
# ----------------------------------------------------------------------
[features]
default            = ["std", "tokio"]
std                = []
tokio              = ["dep:tokio", "dep:tokio-util"]
# Hardware-dependent features; turned off in sandbox / unit tests.
llama_cpp          = ["dep:llama-cpp-rs"]
usearch_hnsw       = ["dep:usearch"]
rusqlite           = ["dep:rusqlite", "dep:r2d2", "dep:r2d2_sqlite"]
sqlcipher          = ["rusqlite", "rusqlite/bundled-sqlcipher-vendored-openssl"]
# `scraper` removed in v0.7.5 (see workspace Cargo.toml note): the
# current search engines use JSON-only APIs and `scraper` pulls in
# MPL-2.0 transitives that violate the Apache/MIT-only license policy.
network            = ["dep:reqwest", "dep:url", "tokio"]
candle             = ["dep:half", "dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:tokenizers"]
android_keystore   = []
# Internal compatibility tripwire used by existing hardened-only cfg guards.
# Do not expose this as the application deployment feature.
release-hardening  = []
# Public policy feature; deliberately distinct from compiler profile
# `[profile.release-hardening]` and from runtime environment mode.
runtime_hardening  = ["release-hardening"]

[dependencies]
# Workspace-shared deps (see ../Cargo.toml)
tokio        = { workspace = true, optional = true }
tokio-util   = { workspace = true, optional = true }
futures      = { workspace = true }
async-trait  = { workspace = true }

serde        = { workspace = true }
serde_json   = { workspace = true }
toml         = { workspace = true }

sha2         = { workspace = true }
blake3       = { workspace = true }
zeroize      = { workspace = true }
subtle       = { workspace = true }

tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

thiserror     = { workspace = true }
anyhow        = { workspace = true }

parking_lot   = { workspace = true }
once_cell     = { workspace = true }
bloomfilter   = { workspace = true }

uuid          = { workspace = true }
chrono        = { workspace = true }

# Optional integrations ----------------------------------------------------
rusqlite    = { workspace = true, optional = true }
r2d2        = { workspace = true, optional = true }
r2d2_sqlite = { workspace = true, optional = true }
usearch     = { workspace = true, optional = true }
reqwest     = { workspace = true, optional = true }
url         = { workspace = true, optional = true }
tokenizers  = { workspace = true, optional = true }
half        = { workspace = true, optional = true }
candle-core = { workspace = true, optional = true }
candle-nn   = { workspace = true, optional = true }
candle-transformers = { workspace = true, optional = true }
llama-cpp-rs = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3.10"
tokio    = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
# Architect review GH #18: property-based testing for the sentinel
# escape (`tools::sentinel::escape_untrusted`) and the fingerprint
# canonicaliser. `proptest` is also pulled in for the migration-order
# (GH #41) and idempotency (GH #35) tests in later batches.
proptest = "1.5"
loom     = "0.7"
wiremock = "0.6"
